# XRBrowser

./: LICENSE  Proceedings.md  README.md
GPUProjects/: Projects.md  Readme.md
GPUProjects/GPTThreads/: 00000.md
GPUProjects/Plugins/Android/src/main/java/com/example/webviewgpu/: NativeBridge.java
GPUProjects/Scripts/Android/: DebugPresentation.java  MainActivity.java
GPUProjects/Scripts/GPUViewer/: Cp3StatusHud.cs  Cp4VkCheckHud.cs  Cp4VulkanTextureHud.cs  JavaSmokeTest.cs
GPUProjects/cpp/: CMakeLists.txt  DummyTexPlugin.cpp  native-lib.cpp  native_bridge_jni.cpp
Scripts/: Cp4DummyTexture.cs  CpuWebViewTexture.cs  WebQuadTapperXr.cs  XriKeyboardToWebBridge.cs
webviewcpu/: WebViewCpuBridge.java
